<resources>
    <string name="app_name">ImageAnalysis</string>
    <string name="take_photo">Take photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="originalimage">Show original image</string>
    <string name="watershed">Watershed the image</string>
    <string name="grabcut">Grabcut the image</string>
    <string name="binarization">Binarization</string>
    <string name="photofromfile">Select from file</string>
    <string name="meanshift">Meanshift</string>
    <string name="canny">Canny</string>
    <string name="saveimage">Save image</string>
    <string name="overwritebase">Overwrite base image</string>


    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
