<!--menu_main.xml-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/photofromfile"
        android:title="@string/photofromfile"
        android:orderInCategory="100"  />
    <item android:id="@+id/originalimage" android:title="@string/originalimage"
        android:orderInCategory="100"  />
    <item android:id="@+id/saveimage" android:title="@string/saveimage"
        android:orderInCategory="100" />
    <item android:id="@+id/watershed" android:title="@string/watershed"
        android:orderInCategory="100"  />
    <item android:id="@+id/grabcut" android:title="@string/grabcut"
        android:orderInCategory="100"  />
    <item android:id="@+id/binarization" android:title="@string/binarization"
        android:orderInCategory="100" />
    <item android:id="@+id/meanshift" android:title="@string/meanshift"
        android:orderInCategory="100"  />
    <item android:id="@+id/canny" android:title="@string/canny"
        android:orderInCategory="100" />
    <item android:id="@+id/overwritebase" android:title="@string/overwritebase"
        android:orderInCategory="100"/>

    <!-- If need to make new icon!
    <item
        android:id="@+id/action_find_location"
        android:orderInCategory="101"
        android:title="@string/action_find_location"
        android:icon="@drawable/ic_action_location_found"
        app:showAsAction="always"/> -->
</menu>

<!-- OLD MENU INTERFACE
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/photofromfile" android:title="@string/photofromfile"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/originalimage" android:title="@string/originalimage"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/watershed" android:title="@string/watershed"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/grabcut" android:title="@string/grabcut"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/binarization" android:title="@string/binarization"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/meanshift" android:title="@string/meanshift"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/canny" android:title="@string/canny"
        android:orderInCategory="100" android:showAsAction="never" />
</menu> !-->
